--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,13 +1,49 @@
-build:
+stages:
+  - building
+  - test
+
+gcc:
+  stage: building
   script:
-  - git submodule init
-  - git submodule update
-  - ./compile.sh
-  - ./build/main_tests
-  after_script:
-  - cd /media/storage/gitlab/
-  - rm -rf GoogleTest_Example
-  - git clone http://git.home.lan/root/GoogleTest_Example.git
-  - cd GoogleTest_Example
-  - git submodule init
-  - git submodule update
+    - mkdir build
+    - cd build
+    - cmake -G "Unix Makefiles"
+      -DCMAKE_C_COMPILER=gcc
+      -DCMAKE_CXX_COMPILER=g++
+      -DCMAKE_BUILD_TYPE=Release
+      -DTEST=true
+      ..
+    - cmake --build .
+  artifacts:
+    paths:
+      - build/main_tests
+
+clang:
+  stage: building
+  script:
+    - mkdir build
+    - cd build
+    - cmake -G "Unix Makefiles"
+      -DCMAKE_C_COMPILER=clang
+      -DCMAKE_CXX_COMPILER=clang++
+      -DCMAKE_BUILD_TYPE=Release
+      -DTEST=true
+      ..
+    - cmake --build .
+  artifacts:
+    paths:
+      - build/main_tests
+
+google-gcc:
+  stage: test
+  dependencies:
+    - gcc
+  script:
+    - ./build/main_tests
+
+google-clang:
+  stage: test
+  dependencies:
+    - clang
+  script:
+    - ./build/main_tests
